--- a/packages/storybookbase/package.json
+++ b/packages/storybookbase/package.json
@@ -6,6 +6,9 @@
   "file": [
     "main.js"
   ],
+  "scripts": {
+    "clean": "echo 'done'"
+  },
   "author": "Yuxuan Huo",
   "license": "MIT",
   "dependencies": {
