--- a/packages/ui/input/package.json
+++ b/packages/ui/input/package.json
@@ -83,6 +83,7 @@
         }
     },
     "dependencies": {
+        "@huse/derived-state": "^1.1.1",
         "@osui/button": "^1.2.5",
         "@osui/input": "^1.2.5",
         "classnames": "^2.2.6",
