--- a/examples/reskript/package.json
+++ b/examples/reskript/package.json
@@ -18,10 +18,9 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@ecomfe/react-track": "^3.0.1",
-    "@osui/button": "^1.0.0-beta.1",
-    "@osui/icloud-theme": "^1.0.0-beta.1",
-    "@osui/ui": "^1.0.10",
-    "antd": "^4.15.6",
+    "@osui/icloud-theme": "^1.2.0",
+    "@osui/ui": "^1.2.5",
+    "antd": "^4.17.4",
     "axios-interface": "^1.3.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
@@ -31,15 +30,16 @@
   },
   "devDependencies": {
     "@baidu/reskript-plugins": "^1.0.1",
-    "@reskript/cli": "^1.11.1",
-    "@reskript/cli-build": "^1.11.1",
-    "@reskript/cli-dev": "^1.11.1",
-    "@reskript/cli-lint": "^1.11.1",
-    "@reskript/config-lint": "^1.11.1",
+    "@reskript/cli": "^2.4.0",
+    "@reskript/cli-build": "^2.4.0",
+    "@reskript/cli-dev": "^2.4.0",
+    "@reskript/cli-lint": "^2.4.0",
+    "@reskript/config-lint": "^2.4.0",
     "@types/lodash": "^4.14.165",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.6",
+    "core-js": "^3.20.0",
     "eslint": "^7.23.0",
     "husky": "^4.3.8",
     "stylelint": "^13.12.0",
