--- a/packages/ui/input-number/package.json
+++ b/packages/ui/input-number/package.json
@@ -70,6 +70,9 @@
         "react-dom": ">=16.9.0"
     },
     "dependencies": {
+        "@huse/derived-state": "^1.1.1",
+        "@osui/button": "^1.2.5",
+        "@osui/input": "^1.2.5",
         "classnames": "^2.2.6"
     },
     "repository": {
