--- a/packages/ui/auto-complete/package.json
+++ b/packages/ui/auto-complete/package.json
@@ -46,7 +46,7 @@
         "@types/jest": "^26.0.24",
         "@types/react-dom": "^16.9.8",
         "@types/react-test-renderer": "^17.0.1",
-        "antd": "^4.17.0",
+        "antd": "^4.18.0",
         "babel-loader": "^8.1.0",
         "babel-merge": "^3.0.0",
         "cpy-cli": "^3.1.1",
@@ -66,7 +66,7 @@
     },
     "peerDependencies": {
         "@osui/icons": "^1.1.1",
-        "antd": ">=4.4.0 <4.17.0",
+        "antd": ">=4.4.0 <=4.18.4",
         "react": ">=16.9.0",
         "react-dom": ">=16.9.0"
     },
