--- a/packages/ui/steps/package.json
+++ b/packages/ui/steps/package.json
@@ -46,7 +46,7 @@
         "@types/jest": "^26.0.24",
         "@types/react-dom": "^16.9.8",
         "@types/react-test-renderer": "^17.0.1",
-        "antd": "^4.17.0",
+        "antd": "^4.18.0",
         "babel-merge": "^3.0.0",
         "cpy-cli": "^3.1.1",
         "enzyme": "^3.11.0",
@@ -64,7 +64,7 @@
         "webpack": "^5.52.1"
     },
     "peerDependencies": {
-        "antd": ">=4.4.0 <4.17.0",
+        "antd": ">=4.4.0 <=4.18.4",
         "react": ">=16.9.0",
         "react-dom": ">=16.9.0"
     },
