--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -43,7 +43,7 @@
         "webpack": "^5.52.1"
     },
     "peerDependencies": {
-        "antd": ">=4.4.0 <4.17.0",
+        "antd": ">=4.4.0 <=4.18.4",
         "react": ">=16.9.0",
         "react-dom": ">=16.9.0"
     },
