--- a/packages/ui/cascader/package.json
+++ b/packages/ui/cascader/package.json
@@ -71,7 +71,8 @@
         "react-dom": ">=16.9.0"
     },
     "dependencies": {
-        "classnames": "^2.2.6"
+        "classnames": "^2.2.6",
+        "hoist-non-react-statics": "^3.3.2"
     },
     "repository": {
         "type": "git",
