--- a/packages/ui/docs/icloud/package.json
+++ b/packages/ui/docs/icloud/package.json
@@ -61,6 +61,7 @@
         "react-is": "^16.13.1",
         "react-router-dom": "^5.2.0",
         "react-test-renderer": "^17.0.2",
+        "storybook-dark-mode": "^1.0.8",
         "ts-jest": "^27.0.3",
         "typescript": "^4.4.3",
         "webpack": "^5.52.1"
