--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
         "@reskript/cli": "^2.2.2",
         "@reskript/cli-lint": "^2.2.2",
         "@storybook/cli": "^6.0.26",
+        "@types/css": "^0.0.33",
+        "@types/less": "^3.0.3",
         "commitizen": "^4.1.2",
+        "css": "^3.0.0",
         "cz-conventional-changelog": "^3.2.0",
         "enzyme-adapter-react-16": "^1.15.6",
         "enzyme-to-json": "^3.6.2",
@@ -40,6 +43,8 @@
         "husky": "^4.2.5",
         "jest": "^27.2.1",
         "lerna": "^3.22.1",
+        "less": "^4.1.2",
+        "less-vars-to-js": "^1.3.0",
         "mkdirp": "^1.0.4",
         "mockdate": "^3.0.5",
         "moment": "^2.29.1",
