fix: 修复missing @osui/theme-provider 的问题
Change-Id: I4c8631cd4df6b16d14b98d9476c871dd75362459

--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -127,6 +127,7 @@
         "@osui/tabs": "^1.2.11",
         "@osui/tag": "^1.2.10",
         "@osui/text-overflow-tooltip": "^1.2.10",
+        "@osui/theme-provider": "^1.2.14",
         "@osui/time-picker": "^1.2.10",
         "@osui/timeline": "^1.2.11",
         "@osui/toggle-button": "^1.2.10",
