--- a/lerna.json
+++ b/lerna.json
@@ -2,14 +2,15 @@
     "packages": [
         "packages/*"
     ],
-    "version": "1.2.18",
+    "version": "2.0.0-beta.0",
     "npmClient": "yarn",
     "useWorkspaces": true,
     "command": {
         "version": {
             "allowBranch": [
                 "master",
-                "hot-fix"
+                "hot-fix",
+                "acud"
             ],
             "ignoreChanges": [
                 "**/*.md",
