--- a/packages/ui/form/package.json
+++ b/packages/ui/form/package.json
@@ -37,15 +37,15 @@
         "@reskript/config-babel": "^2.0.0",
         "@reskript/config-lint": "^2.0.0",
         "@reskript/config-webpack": "^2.0.0",
-        "@storybook/addon-a11y": "^6.4.13",
-        "@storybook/addon-docs": "^6.4.13",
-        "@storybook/addon-storysource": "^6.4.13",
-        "@storybook/addon-viewport": "^6.4.13",
-        "@storybook/addons": "^6.4.13",
-        "@storybook/builder-webpack5": "^6.4.13",
-        "@storybook/client-api": "^6.4.13",
-        "@storybook/manager-webpack5": "^6.4.13",
-        "@storybook/react": "^6.4.13",
+        "@storybook/addon-a11y": "^6.5.0-alpha.46",
+        "@storybook/addon-docs": "^6.5.0-alpha.46",
+        "@storybook/addon-storysource": "^6.5.0-alpha.46",
+        "@storybook/addon-viewport": "^6.5.0-alpha.46",
+        "@storybook/addons": "^6.5.0-alpha.46",
+        "@storybook/builder-webpack5": "^6.5.0-alpha.46",
+        "@storybook/client-api": "^6.5.0-alpha.46",
+        "@storybook/manager-webpack5": "^6.5.0-alpha.46",
+        "@storybook/react": "^6.5.0-alpha.46",
         "@types/classnames": "^2.2.10",
         "@types/enzyme": "^3.10.9",
         "@types/jest": "^26.0.24",
