--- a/packages/ui/tag/package.json
+++ b/packages/ui/tag/package.json
@@ -27,20 +27,24 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
+        "@emotion/babel-preset-css-prop": "^11.2.0",
+        "@emotion/react": "^11.8.1",
+        "@emotion/styled": "^11.8.1",
         "@reskript/cli": "^2.0.0",
         "@reskript/cli-lint": "^2.0.0",
         "@reskript/config-babel": "^2.0.0",
         "@reskript/config-lint": "^2.0.0",
         "@reskript/config-webpack": "^2.0.0",
-        "@storybook/addon-a11y": "^6.4.13",
-        "@storybook/addon-docs": "^6.4.13",
-        "@storybook/addon-storysource": "^6.4.13",
-        "@storybook/addon-viewport": "^6.4.13",
-        "@storybook/addons": "^6.4.13",
-        "@storybook/builder-webpack5": "^6.4.13",
-        "@storybook/client-api": "^6.4.13",
-        "@storybook/manager-webpack5": "^6.4.13",
-        "@storybook/react": "^6.4.13",
+        "@storybook/addon-a11y": "^6.5.0-alpha.46",
+        "@storybook/addon-docs": "^6.5.0-alpha.46",
+        "@storybook/addon-storysource": "^6.5.0-alpha.46",
+        "@storybook/addon-viewport": "^6.5.0-alpha.46",
+        "@storybook/addons": "^6.5.0-alpha.46",
+        "@storybook/builder-webpack5": "^6.5.0-alpha.46",
+        "@storybook/client-api": "^6.5.0-alpha.46",
+        "@storybook/manager-webpack5": "^6.5.0-alpha.46",
+        "@storybook/react": "^6.5.0-alpha.46",
+        "@storybook/theming": "^6.4.19",
         "@types/classnames": "^2.2.10",
         "@types/enzyme": "^3.10.9",
         "@types/jest": "^26.0.24",
@@ -53,6 +57,7 @@
         "enzyme": "^3.11.0",
         "husky": "^4.2.5",
         "identity-obj-proxy": "^3.0.0",
+        "immer": "^9.0.12",
         "jest": "^27.0.6",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
@@ -62,6 +67,7 @@
         "react-test-renderer": "^17.0.2",
         "ts-jest": "^27.0.3",
         "typescript": "^4.4.3",
+        "use-immer": "^0.6.0",
         "webpack": "^5.52.1"
     },
     "peerDependencies": {
