--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@ant-design/tools": "^14.0.0-alpha.3",
         "@commitlint/cli": "^9.1.1",
         "@commitlint/config-conventional": "^9.1.1",
+        "@emotion/babel-preset-css-prop": "^11.2.0",
         "@reskript/cli": "^2.2.2",
         "@reskript/cli-lint": "^2.2.2",
         "@storybook/cli": "^6.0.26",
