--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "publish": "lerna publish from-package",
         "publishWithDocs": "lerna publish from-package && yarn build-docs",
         "build-docs": "sh scripts/build-docs.sh osui && sh scripts/build-docs.sh icloud",
-        "test": "lerna exec --no-private --concurrency 10 -- yarn test"
+        "test": "lerna exec --no-private --concurrency 10 -- yarn test",
+        "build-check": "node scripts/build-check.js"
     },
     "devDependencies": {
         "@ant-design/tools": "^14.0.0-alpha.3",
@@ -45,6 +46,7 @@
         "lerna": "^3.22.1",
         "less": "^4.1.2",
         "less-vars-to-js": "^1.3.0",
+        "lodash": "^4.17.21",
         "mkdirp": "^1.0.4",
         "mockdate": "^3.0.5",
         "moment": "^2.29.1",
