--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "lerna": "^3.22.1",
         "less": "^4.1.2",
         "less-vars-to-js": "^1.3.0",
+        "lodash": "^4.17.21",
         "mkdirp": "^1.0.4",
         "mockdate": "^3.0.5",
         "moment": "^2.29.1",
