dev: 增加theme的watch命令
Change-Id: Ib0b6f763b5df708d7650afdeba73bc27b86d4d68

--- a/packages/ui-theme/icloud-theme/package.json
+++ b/packages/ui-theme/icloud-theme/package.json
@@ -11,7 +11,8 @@
     "prepack": "yarn build",
     "storybook": "start-storybook -p 8700",
     "clean": "rm -rf node_modules && rm -rf dist",
-    "test": "echo 'no tests yet'"
+    "test": "echo 'no tests yet'",
+    "watch": "find variables -name '*.ts' | entr scripts/watch.sh"
   },
   "files": [
     "dist"
