--- a/packages/ui/table/package.json
+++ b/packages/ui/table/package.json
@@ -83,6 +83,7 @@
         }
     },
     "dependencies": {
+        "@osui/button": "^1.2.26",
         "@osui/pagination": "2.0.0-beta.0",
         "classnames": "^2.2.6",
         "hoist-non-react-statics": "^3.3.2"
