--- a/packages/ui/message/package.json
+++ b/packages/ui/message/package.json
@@ -79,6 +79,7 @@
     "license": "MIT",
     "dependencies": {
         "@huse/timeout": "^1.1.0",
+        "@osui/config-provider": "^2.0.0-beta.0",
         "classnames": "^2.2.6",
         "lodash.partial": "^4.2.1"
     },
