Revert "dev: 只发布不build"
This reverts commit b8069cbd904272b3c83f8ff26236c5ffaf6376c2.

--- a/packages/ui/affix/package.json
+++ b/packages/ui/affix/package.json
@@ -15,7 +15,7 @@
     "scripts": {
         "lint": "skr lint",
         "build": "sh scripts/build.sh",
-
+        "prepublishOnly": "yarn run build",
         "storybook": "start-storybook -p 8700",
         "clean": "rm -rf node_modules && rm -rf es",
         "test": "jest --config jest.config.js",
