fix: 调整Spin的样式, 调整Select的Demo文档, 调整Table内Spin换成osui的
Change-Id: I551aa2d17fd1642c5496a8d3434ad910ebe3bc87

--- a/packages/ui/select/package.json
+++ b/packages/ui/select/package.json
@@ -54,6 +54,7 @@
         "husky": "^4.2.5",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.0.6",
+        "lodash": "^4.17.21",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
