--- a/packages/ui/tree/package.json
+++ b/packages/ui/tree/package.json
@@ -27,24 +27,24 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@reskript/cli": "^2.0.0",
-        "@reskript/cli-lint": "^2.0.0",
-        "@reskript/config-babel": "^2.0.0",
-        "@reskript/config-lint": "^2.0.0",
-        "@reskript/config-webpack": "^2.0.0",
-        "@storybook/addon-a11y": "^6.5.0-alpha.46",
-        "@storybook/addon-docs": "^6.5.0-alpha.46",
-        "@storybook/addon-storysource": "^6.5.0-alpha.46",
-        "@storybook/addon-viewport": "^6.5.0-alpha.46",
-        "@storybook/addons": "^6.5.0-alpha.46",
-        "@storybook/builder-webpack5": "^6.5.0-alpha.46",
-        "@storybook/client-api": "^6.5.0-alpha.46",
-        "@storybook/manager-webpack5": "^6.5.0-alpha.46",
-        "@storybook/react": "^6.5.0-alpha.46",
-        "@types/classnames": "^2.2.10",
+        "@reskript/cli": "^3.0.0",
+        "@reskript/cli-lint": "^3.0.0",
+        "@reskript/config-babel": "^3.0.0",
+        "@reskript/config-lint": "^3.0.0",
+        "@reskript/config-webpack": "^3.0.0",
+        "@storybook/addon-a11y": "6.5.9",
+        "@storybook/addon-docs": "6.5.9",
+        "@storybook/addon-storysource": "6.5.9",
+        "@storybook/addon-viewport": "6.5.9",
+        "@storybook/addons": "6.5.9",
+        "@storybook/builder-webpack5": "6.5.9",
+        "@storybook/client-api": "6.5.9",
+        "@storybook/manager-webpack5": "6.5.9",
+        "@storybook/react": "6.5.9",
+
         "@types/enzyme": "^3.10.9",
-        "@types/jest": "^26.0.24",
-        "@types/react-dom": "^16.9.8",
+        "@types/jest": "^27.0.0",
+        "@types/react-dom": "^17.0.2",
         "@types/react-test-renderer": "^17.0.1",
         "antd": "^4.21.3",
         "babel-loader": "^8.1.0",
@@ -55,23 +55,26 @@
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.0.6",
         "prop-types": "^15.7.2",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-is": "^16.13.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-is": "^17.0.2",
         "react-router-dom": "^5.2.0",
         "react-test-renderer": "^17.0.2",
         "ts-jest": "^27.0.3",
         "typescript": "^4.4.3",
-        "webpack": "^5.52.1"
+        "webpack": "^5.52.1",
+        "styled-components": "~5.3.5",
+        "eslint": "^8.0.0",
+        "stylelint": "^14.0.0"
     },
     "peerDependencies": {
-        "@osui/icons": "^1.1.1",
+        "@osui/icons": "^2.1.0",
         "antd": ">=4.21.3",
-        "react": ">=16.9.0",
-        "react-dom": ">=16.9.0"
+        "react": ">=17.0.0",
+        "react-dom": ">=17.0.0"
     },
     "dependencies": {
-        "classnames": "^2.2.6"
+        "classnames": "^2.3.1"
     },
     "repository": {
         "type": "git",
