--- a/packages/ui-icons/icons-builder/package.json
+++ b/packages/ui-icons/icons-builder/package.json
@@ -7,7 +7,7 @@
     "src/"
   ],
   "scripts": {
-    "generate": "node -r esm build/generate.js",
+    "build": "node -r esm build/generate.js",
     "clean": "rm -rf node_modules",
     "test": "echo 'none'"
   },
@@ -21,16 +21,17 @@
   "license": "MIT",
   "devDependencies": {
     "esm": "^3.2.25",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.21",
     "mkdirp": "^1.0.4",
     "node-fetch": "^2.6.0",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "stringify-object": "^3.3.0",
     "svgo": "^1.3.2",
-    "svgson": "^4.1.0"
+    "svgson": "^4.1.0",
+    "eslint": "^8.0.0"
   },
   "dependencies": {
-    "classnames": "^2.2.6"
+    "classnames": "^2.3.1"
   }
 }
