--- a/packages/ui-icons/osui-icons-icloud/package.json
+++ b/packages/ui-icons/osui-icons-icloud/package.json
@@ -6,7 +6,7 @@
     "name": "zhanglili01,huoyuxuan,lisiqi06,guyiling"
   },
   "scripts": {
-    "build": "yarn workspace @osui/icons-builder generate icloud && sh scripts/build.sh",
+    "build": "yarn workspace @osui/icons-builder build icloud && sh scripts/build.sh",
     "build-icons-only": "sh scripts/build.sh",
     "prepublishOnly": "npm run build",
     "clean": "rm -rf dist && rm -rf node_modules",
@@ -23,13 +23,17 @@
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-json": "^4.1.0",
     "babel-plugin-react-require": "^3.0.0",
-    "react": "^16.4.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rollup": "^1.12.3",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-node-resolve": "^5.0.0",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-string": "^3.0.0"
+    "rollup-plugin-string": "^3.0.0",
+    "styled-components": "~5.3.5",
+    "eslint": "^8.0.0",
+    "stylelint": "^14.0.0"
   },
   "files": [
     "dist",
@@ -44,10 +48,10 @@
   ],
   "license": "MIT",
   "peerDependencies": {
-    "react": ">=16"
+    "react": ">=17"
   },
   "dependencies": {
-    "classnames": "^2.2.6"
+    "classnames": "^2.3.1"
   },
   "publishConfig": {
     "access": "public",
