--- a/packages/ui/docs/icloud/package.json
+++ b/packages/ui/docs/icloud/package.json
@@ -15,8 +15,8 @@
     ],
     "scripts": {
         "lint": "skr lint",
-        "build": "echo \"special build\"",
-        "build-storybook": "build-storybook -c .storybook -o dist",
+        "build": "echo 'done'",
+        "build-storybook": "node -r esm build-storybook -c .storybook -o dist",
         "storybook": "start-storybook -p 8700",
         "clean": "rm -rf node_modules && rm -rf es",
         "test": "echo 'jest --config jest.config.js'",
@@ -28,24 +28,24 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@reskript/cli": "^2.0.0",
-        "@reskript/cli-lint": "^2.0.0",
-        "@reskript/config-babel": "^2.0.0",
-        "@reskript/config-lint": "^2.0.0",
-        "@reskript/config-webpack": "^2.0.0",
-        "@storybook/addon-a11y": "^6.5.0-alpha.46",
-        "@storybook/addon-docs": "^6.5.0-alpha.46",
-        "@storybook/addon-storysource": "^6.5.0-alpha.46",
-        "@storybook/addon-viewport": "^6.5.0-alpha.46",
-        "@storybook/addons": "^6.5.0-alpha.46",
-        "@storybook/builder-webpack5": "^6.5.0-alpha.46",
-        "@storybook/client-api": "^6.5.0-alpha.46",
-        "@storybook/manager-webpack5": "^6.5.0-alpha.46",
-        "@storybook/react": "^6.5.0-alpha.46",
-        "@types/classnames": "^2.2.10",
+        "@reskript/cli": "^3.0.0",
+        "@reskript/cli-lint": "^3.0.0",
+        "@reskript/config-babel": "^3.0.0",
+        "@reskript/config-lint": "^3.0.0",
+        "@reskript/config-webpack": "^3.0.0",
+        "@storybook/addon-a11y": "6.5.9",
+        "@storybook/addon-docs": "6.5.9",
+        "@storybook/addon-storysource": "6.5.9",
+        "@storybook/addon-viewport": "6.5.9",
+        "@storybook/addons": "6.5.9",
+        "@storybook/builder-webpack5": "6.5.9",
+        "@storybook/client-api": "6.5.9",
+        "@storybook/manager-webpack5": "6.5.9",
+        "@storybook/react": "6.5.9",
+
         "@types/enzyme": "^3.10.9",
-        "@types/jest": "^26.0.24",
-        "@types/react-dom": "^16.9.8",
+        "@types/jest": "^27.0.0",
+        "@types/react-dom": "^17.0.2",
         "@types/react-test-renderer": "^17.0.1",
         "antd": "^4.21.3",
         "babel-loader": "^8.1.0",
@@ -56,20 +56,21 @@
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.0.6",
         "prop-types": "^15.7.2",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-is": "^16.13.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-is": "^17.0.2",
         "react-router-dom": "^5.2.0",
         "react-test-renderer": "^17.0.2",
         "storybook-dark-mode": "^1.0.8",
         "ts-jest": "^27.0.3",
         "typescript": "^4.4.3",
-        "webpack": "^5.52.1"
+        "webpack": "^5.52.1",
+        "eslint": "^8.0.0"
     },
     "peerDependencies": {
         "antd": ">=4.21.3",
-        "react": ">=16.9.0",
-        "react-dom": ">=16.9.0"
+        "react": ">=17.0.2",
+        "react-dom": ">=17.0.2"
     },
     "repository": {
         "type": "git",
@@ -78,6 +79,84 @@
     "author": "huoyuxuan",
     "license": "MIT",
     "dependencies": {
-        "classnames": "^2.2.6"
+        "classnames": "^2.3.1",
+        "@osui/affix": "^2.1.0",
+        "@osui/alert": "^2.1.0",
+        "@osui/anchor": "^2.1.0",
+        "@osui/auto-complete": "^2.1.0",
+        "@osui/avatar": "^2.1.0",
+        "@osui/back-top": "^2.1.0",
+        "@osui/badge": "^2.1.0",
+        "@osui/brand-provider": "^2.1.0",
+        "@osui/breadcrumb": "^2.1.0",
+        "@osui/button": "^2.1.0",
+        "@osui/calendar": "^2.1.0",
+        "@osui/card": "^2.1.0",
+        "@osui/carousel": "^2.1.0",
+        "@osui/cascader": "^2.1.0",
+        "@osui/checkbox": "^2.1.0",
+        "@osui/col": "^2.1.0",
+        "@osui/collapse": "^2.1.0",
+        "@osui/comment": "^2.1.0",
+        "@osui/config-provider": "^2.1.0",
+        "@osui/date-picker": "^2.1.0",
+        "@osui/descriptions": "^2.1.0",
+        "@osui/divider": "^2.1.0",
+        "@osui/drawer": "^2.1.0",
+        "@osui/dropdown": "^2.1.0",
+        "@osui/empty": "^2.1.0",
+        "@osui/flex-centered": "^2.1.0",
+        "@osui/form": "^2.1.0",
+        "@osui/gap": "^2.1.0",
+        "@osui/grid": "^2.1.0",
+        "@osui/highlight-text": "^2.1.0",
+        "@osui/image": "^2.1.0",
+        "@osui/input": "^2.1.0",
+        "@osui/input-number": "^2.1.0",
+        "@osui/joyride": "^2.1.0",
+        "@osui/layout": "^2.1.0",
+        "@osui/list": "^2.1.0",
+        "@osui/markdown": "^2.1.0",
+        "@osui/mentions": "^2.1.0",
+        "@osui/menu": "^2.1.0",
+        "@osui/message": "^2.1.0",
+        "@osui/modal": "^2.1.0",
+        "@osui/notification": "^2.1.0",
+        "@osui/page-header": "^2.1.0",
+        "@osui/pagination": "^2.1.0",
+        "@osui/popconfirm": "^2.1.0",
+        "@osui/popover": "^2.1.0",
+        "@osui/progress": "^2.1.0",
+        "@osui/quick-edit": "^2.1.0",
+        "@osui/radio": "^2.1.0",
+        "@osui/rate": "^2.1.0",
+        "@osui/result": "^2.1.0",
+        "@osui/row": "^2.1.0",
+        "@osui/segmented": "^2.1.0",
+        "@osui/select": "^2.1.0",
+        "@osui/skeleton": "^2.1.0",
+        "@osui/slider": "^2.1.0",
+        "@osui/space": "^2.1.0",
+        "@osui/spin": "^2.1.0",
+        "@osui/statistic": "^2.1.0",
+        "@osui/steps": "^2.1.0",
+        "@osui/switch": "^2.1.0",
+        "@osui/table": "^2.1.0",
+        "@osui/tabs": "^2.1.0",
+        "@osui/tag": "^2.1.0",
+        "@osui/text-overflow-tooltip": "^2.1.0",
+        "@osui/theme-provider": "^2.1.0",
+        "@osui/time-picker": "^2.1.0",
+        "@osui/timeline": "^2.1.0",
+        "@osui/tooltip": "^2.1.0",
+        "@osui/transfer": "^2.1.0",
+        "@osui/tree": "^2.1.0",
+        "@osui/tree-select": "^2.1.0",
+        "@osui/typography": "^2.1.0",
+        "@osui/upload": "^2.1.0",
+        "@osui/version": "^2.1.0",
+        "@osui/ui":"^2.1.0",
+        "@osui/icloud-theme":"^2.1.0",
+        "@osui/icons-icloud":"^2.1.0"
     }
 }
