--- a/packages/ui/highlight-text/package.json
+++ b/packages/ui/highlight-text/package.json
@@ -26,8 +26,8 @@
         "es/*.less"
     ],
     "devDependencies": {
-        "@osui/icons": "workspace:^",
-        "@osui/icons-icloud": "workspace:^",
+        "@osui/icons": "^2.1.0",
+        "@osui/icons-icloud": "^2.1.0",
         "@babel/cli": "^7.10.5",
         "@huse/input-value": "^1.1.1",
         "@reskript/cli": "^3.0.0",
