--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
         "@commitlint/cli": "^9.1.1",
         "@commitlint/config-conventional": "^9.1.1",
         "@emotion/babel-preset-css-prop": "^11.2.0",
-        "@osui/icons": "workspace:^",
-        "@osui/icons-icloud": "workspace:^",
+        "@osui/icons": "^2.1.0",
+        "@osui/icons-icloud": "^2.1.0",
         "@reskript/cli": "^2.2.2",
         "@reskript/cli-lint": "^2.2.2",
         "@storybook/cli": "^6.0.26",
