--- a/packages/ui-theme/icloud-theme/package.json
+++ b/packages/ui-theme/icloud-theme/package.json
@@ -21,8 +21,8 @@
     "dist/**"
   ],
   "devDependencies": {
-        "@osui/icons": "workspace:^",
-        "@osui/icons-icloud": "workspace:^",
+        "@osui/icons": "^2.1.0",
+        "@osui/icons-icloud": "^2.1.0",
     "@babel/cli": "^7.10.5",
     "@reskript/cli": "^3.0.0",
     "@reskript/cli-lint": "^3.0.0",
