--- a/packages/ui/tag/package.json
+++ b/packages/ui/tag/package.json
@@ -26,8 +26,8 @@
         "es/*.less"
     ],
     "devDependencies": {
-        "@osui/icons": "workspace:^",
-        "@osui/icons-icloud": "workspace:^",
+        "@osui/icons": "^2.1.0",
+        "@osui/icons-icloud": "^2.1.0",
         "@babel/cli": "^7.10.5",
         "@emotion/babel-preset-css-prop": "^11.2.0",
         "@emotion/react": "^11.8.1",
