fix: input下拉框border focus时显示错位

--- a/packages/ui/input/package.json
+++ b/packages/ui/input/package.json
@@ -27,8 +27,11 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
+        "@osui/brand-provider": "workspace:^2.1.9",
+        "@osui/icloud-theme": "workspace:^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
+        "@osui/ui": "workspace:^2.1.9",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
