--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
         "@commitlint/cli": "^9.1.2",
         "@commitlint/config-conventional": "^9.1.2",
         "@emotion/babel-preset-css-prop": "^11.10.0",
-        "@osui/icons": "workspace:^2.1.9",
-        "@osui/icons-icloud": "workspace:^2.1.9",
+        "@osui/icons": "^2.1.9",
+        "@osui/icons-icloud": "^2.1.9",
         "@reskript/cli": "^2.5.4",
         "@reskript/cli-lint": "^2.5.4",
         "@storybook/cli": "^6.5.10",
