--- a/packages/ui/docs/icloud/package.json
+++ b/packages/ui/docs/icloud/package.json
@@ -86,85 +86,85 @@
     "author": "huoyuxuan",
     "license": "MIT",
     "dependencies": {
-        "@osui/affix": "workspace:^2.1.9",
-        "@osui/alert": "workspace:^2.1.9",
-        "@osui/anchor": "workspace:^2.1.9",
-        "@osui/auto-complete": "workspace:^2.1.9",
-        "@osui/avatar": "workspace:^2.1.9",
-        "@osui/back-top": "workspace:^2.1.9",
-        "@osui/badge": "workspace:^2.1.9",
-        "@osui/brand-provider": "workspace:^2.1.9",
-        "@osui/breadcrumb": "workspace:^2.1.9",
-        "@osui/button": "workspace:^2.1.9",
-        "@osui/calendar": "workspace:^2.1.9",
-        "@osui/card": "workspace:^2.1.9",
-        "@osui/carousel": "workspace:^2.1.9",
-        "@osui/cascader": "workspace:^2.1.9",
-        "@osui/checkbox": "workspace:^2.1.9",
-        "@osui/col": "workspace:^2.1.9",
-        "@osui/collapse": "workspace:^2.1.9",
-        "@osui/comment": "workspace:^2.1.9",
-        "@osui/config-provider": "workspace:^2.1.9",
-        "@osui/date-picker": "workspace:^2.1.9",
-        "@osui/descriptions": "workspace:^2.1.9",
-        "@osui/divider": "workspace:^2.1.9",
-        "@osui/drawer": "workspace:^2.1.9",
-        "@osui/dropdown": "workspace:^2.1.9",
-        "@osui/empty": "workspace:^2.1.9",
-        "@osui/flex-centered": "workspace:^2.1.9",
-        "@osui/form": "workspace:^2.1.13",
-        "@osui/gap": "workspace:^2.1.9",
-        "@osui/grid": "workspace:^2.1.9",
-        "@osui/highlight-text": "workspace:^2.1.9",
-        "@osui/icloud-theme": "workspace:^2.1.10",
-        "@osui/icons": "workspace:^2.1.9",
-        "@osui/icons-icloud": "workspace:^2.1.9",
-        "@osui/image": "workspace:^2.1.9",
-        "@osui/input": "workspace:^2.1.12",
-        "@osui/input-number": "workspace:^2.1.10",
-        "@osui/joyride": "workspace:^2.1.9",
-        "@osui/layout": "workspace:^2.1.9",
-        "@osui/list": "workspace:^2.1.9",
-        "@osui/markdown": "workspace:^2.1.9",
-        "@osui/mentions": "workspace:^2.1.9",
-        "@osui/menu": "workspace:^2.1.9",
-        "@osui/message": "workspace:^2.1.9",
-        "@osui/modal": "workspace:^2.1.10",
-        "@osui/notification": "workspace:^2.1.9",
-        "@osui/page-header": "workspace:^2.1.9",
-        "@osui/pagination": "workspace:^2.1.9",
-        "@osui/popconfirm": "workspace:^2.1.9",
-        "@osui/popover": "workspace:^2.1.9",
-        "@osui/progress": "workspace:^2.1.9",
-        "@osui/quick-edit": "workspace:^2.1.10",
-        "@osui/radio": "workspace:^2.1.9",
-        "@osui/rate": "workspace:^2.1.9",
-        "@osui/result": "workspace:^2.1.9",
-        "@osui/row": "workspace:^2.1.9",
-        "@osui/segmented": "workspace:^2.1.9",
-        "@osui/select": "workspace:^2.1.9",
-        "@osui/skeleton": "workspace:^2.1.9",
-        "@osui/slider": "workspace:^2.1.9",
-        "@osui/space": "workspace:^2.1.9",
-        "@osui/spin": "workspace:^2.1.9",
-        "@osui/statistic": "workspace:^2.1.9",
-        "@osui/steps": "workspace:^2.1.9",
-        "@osui/switch": "workspace:^2.1.10",
-        "@osui/table": "workspace:^2.1.9",
-        "@osui/tabs": "workspace:^2.1.9",
-        "@osui/tag": "workspace:^2.1.9",
-        "@osui/text-overflow-tooltip": "workspace:^2.1.9",
-        "@osui/theme-provider": "workspace:^2.1.9",
-        "@osui/time-picker": "workspace:^2.1.9",
-        "@osui/timeline": "workspace:^2.1.9",
-        "@osui/tooltip": "workspace:^2.1.9",
-        "@osui/transfer": "workspace:^2.1.9",
-        "@osui/tree": "workspace:^2.1.9",
-        "@osui/tree-select": "workspace:^2.1.9",
-        "@osui/typography": "workspace:^2.1.9",
-        "@osui/ui": "workspace:^2.1.11",
-        "@osui/upload": "workspace:^2.1.9",
-        "@osui/version": "workspace:^2.1.9",
+        "@osui/affix": "^2.1.9",
+        "@osui/alert": "^2.1.9",
+        "@osui/anchor": "^2.1.9",
+        "@osui/auto-complete": "^2.1.9",
+        "@osui/avatar": "^2.1.9",
+        "@osui/back-top": "^2.1.9",
+        "@osui/badge": "^2.1.9",
+        "@osui/brand-provider": "^2.1.9",
+        "@osui/breadcrumb": "^2.1.9",
+        "@osui/button": "^2.1.9",
+        "@osui/calendar": "^2.1.9",
+        "@osui/card": "^2.1.9",
+        "@osui/carousel": "^2.1.9",
+        "@osui/cascader": "^2.1.9",
+        "@osui/checkbox": "^2.1.9",
+        "@osui/col": "^2.1.9",
+        "@osui/collapse": "^2.1.9",
+        "@osui/comment": "^2.1.9",
+        "@osui/config-provider": "^2.1.9",
+        "@osui/date-picker": "^2.1.9",
+        "@osui/descriptions": "^2.1.9",
+        "@osui/divider": "^2.1.9",
+        "@osui/drawer": "^2.1.9",
+        "@osui/dropdown": "^2.1.9",
+        "@osui/empty": "^2.1.9",
+        "@osui/flex-centered": "^2.1.9",
+        "@osui/form": "^2.1.13",
+        "@osui/gap": "^2.1.9",
+        "@osui/grid": "^2.1.9",
+        "@osui/highlight-text": "^2.1.9",
+        "@osui/icloud-theme": "^2.1.10",
+        "@osui/icons": "^2.1.9",
+        "@osui/icons-icloud": "^2.1.9",
+        "@osui/image": "^2.1.9",
+        "@osui/input": "^2.1.12",
+        "@osui/input-number": "^2.1.10",
+        "@osui/joyride": "^2.1.9",
+        "@osui/layout": "^2.1.9",
+        "@osui/list": "^2.1.9",
+        "@osui/markdown": "^2.1.9",
+        "@osui/mentions": "^2.1.9",
+        "@osui/menu": "^2.1.9",
+        "@osui/message": "^2.1.9",
+        "@osui/modal": "^2.1.10",
+        "@osui/notification": "^2.1.9",
+        "@osui/page-header": "^2.1.9",
+        "@osui/pagination": "^2.1.9",
+        "@osui/popconfirm": "^2.1.9",
+        "@osui/popover": "^2.1.9",
+        "@osui/progress": "^2.1.9",
+        "@osui/quick-edit": "^2.1.10",
+        "@osui/radio": "^2.1.9",
+        "@osui/rate": "^2.1.9",
+        "@osui/result": "^2.1.9",
+        "@osui/row": "^2.1.9",
+        "@osui/segmented": "^2.1.9",
+        "@osui/select": "^2.1.9",
+        "@osui/skeleton": "^2.1.9",
+        "@osui/slider": "^2.1.9",
+        "@osui/space": "^2.1.9",
+        "@osui/spin": "^2.1.9",
+        "@osui/statistic": "^2.1.9",
+        "@osui/steps": "^2.1.9",
+        "@osui/switch": "^2.1.10",
+        "@osui/table": "^2.1.9",
+        "@osui/tabs": "^2.1.9",
+        "@osui/tag": "^2.1.9",
+        "@osui/text-overflow-tooltip": "^2.1.9",
+        "@osui/theme-provider": "^2.1.9",
+        "@osui/time-picker": "^2.1.9",
+        "@osui/timeline": "^2.1.9",
+        "@osui/tooltip": "^2.1.9",
+        "@osui/transfer": "^2.1.9",
+        "@osui/tree": "^2.1.9",
+        "@osui/tree-select": "^2.1.9",
+        "@osui/typography": "^2.1.9",
+        "@osui/ui": "^2.1.11",
+        "@osui/upload": "^2.1.9",
+        "@osui/version": "^2.1.9",
         "classnames": "^2.3.1"
     }
 }
