--- a/packages/ui/docs/osui/package.json
+++ b/packages/ui/docs/osui/package.json
@@ -28,6 +28,8 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
+        "@osui/brand-provider": "^2.1.9",
+        "@osui/ui": "^2.1.15",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
         "@reskript/cli": "^2.0.0",
