--- a/packages/ui/back-top/package.json
+++ b/packages/ui/back-top/package.json
@@ -27,6 +27,8 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
+        "@osui/brand-provider": "^2.1.9",
+        "@osui/ui": "^2.1.15",
         "@babel/core": "^7.10.5",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
