--- a/packages/ui/steps/package.json
+++ b/packages/ui/steps/package.json
@@ -27,8 +27,11 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
+        "@osui/brand-provider": "^2.1.9",
+        "@osui/icloud-theme": "^2.1.12",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
+        "@osui/ui": "^2.1.15",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -48,6 +51,7 @@
         "@types/react-dom": "^17.0.2",
         "@types/react-test-renderer": "^17.0.1",
         "antd": "^4.21.3",
+        "babel-loader": "^8.2.5",
         "babel-merge": "^3.0.0",
         "cpy-cli": "^3.1.1",
         "enzyme": "^3.11.0",
