--- a/packages/ui/table/package.json
+++ b/packages/ui/table/package.json
@@ -27,8 +27,11 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
+        "@osui/brand-provider": "^2.1.9",
+        "@osui/ui": "^2.1.15",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
+        "@osui/pagination": "^2.1.10",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -83,7 +86,6 @@
     "license": "MIT",
     "dependencies": {
         "@osui/button": "^2.1.9",
-        "@osui/pagination": "^2.1.10",
         "@osui/spin": "^2.1.9",
         "classnames": "^2.3.1",
         "hoist-non-react-statics": "^3.3.2",
