--- a/packages/ui/tag/package.json
+++ b/packages/ui/tag/package.json
@@ -27,6 +27,8 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
+        "@osui/brand-provider": "^2.1.9",
+        "@osui/ui": "^2.1.15",
         "@emotion/babel-preset-css-prop": "^11.2.0",
         "@emotion/react": "^11.8.1",
         "@emotion/styled": "^11.8.1",
