--- a/packages/ui/ui/package.json
+++ b/packages/ui/ui/package.json
@@ -27,6 +27,8 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
+        "@osui/brand-provider": "^2.1.9",
+        "@osui/ui": "^2.1.15",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
         "@reskript/cli": "^3.0.0",
@@ -67,6 +69,7 @@
         "@osui/back-top": "^2.1.9",
         "@osui/badge": "^2.1.9",
         "@osui/brand-provider": "^2.1.9",
+        "@osui/ui": "^2.1.15",
         "@osui/breadcrumb": "^2.1.9",
         "@osui/button": "^2.1.9",
         "@osui/calendar": "^2.1.9",
