--- a/packages/ui/highlight-text/package.json
+++ b/packages/ui/highlight-text/package.json
@@ -27,11 +27,11 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^2.1.9",
-        "@osui/ui": "^2.1.16",
         "@huse/input-value": "^1.1.1",
+        "@osui/brand-provider": "^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
+        "@osui/input": "workspace:^2.1.12",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
