--- a/packages/ui/input/package.json
+++ b/packages/ui/input/package.json
@@ -27,11 +27,19 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^2.1.9",
-        "@osui/icloud-theme": "^2.1.12",
-        "@osui/icons": "^2.1.9",
-        "@osui/icons-icloud": "^2.1.9",
-        "@osui/ui": "^2.1.16",
+        "@osui/auto-complete": "workspace:^2.1.9",
+        "@osui/brand-provider": "workspace:^2.1.9",
+        "@osui/button": "workspace:^2.1.9",
+        "@osui/cascader": "workspace:^2.1.9",
+        "@osui/divider": "workspace:^2.1.9",
+        "@osui/flex-centered": "workspace:^2.1.9",
+        "@osui/form": "workspace:^2.1.14",
+        "@osui/gap": "workspace:^2.1.9",
+        "@osui/icloud-theme": "workspace:^2.1.12",
+        "@osui/icons": "workspace:^2.1.9",
+        "@osui/icons-icloud": "workspace:^2.1.9",
+        "@osui/select": "workspace:^2.1.9",
+        "@osui/version": "workspace:^2.1.9",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -86,7 +94,6 @@
     "license": "MIT",
     "dependencies": {
         "@huse/derived-state": "^1.1.1",
-        "@osui/button": "^2.1.9",
         "classnames": "^2.3.1",
         "hoist-non-react-statics": "^3.3.2",
         "rc-util": "^5.21.2"
