--- a/packages/ui/joyride/package.json
+++ b/packages/ui/joyride/package.json
@@ -28,9 +28,11 @@
     "devDependencies": {
         "@babel/cli": "^7.10.5",
         "@osui/brand-provider": "^2.1.9",
-        "@osui/ui": "^2.1.16",
+        "@osui/button": "workspace:^2.1.9",
+        "@osui/divider": "workspace:^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
+        "@osui/markdown": "workspace:^2.1.9",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -87,7 +89,6 @@
     },
     "dependencies": {
         "@huse/derived-state": "^1.1.1",
-        "@osui/button": "^2.1.9",
         "classnames": "^2.3.1",
         "lodash.merge": "^4.6.2",
         "react-joyride": "^2.3.0"
