--- a/packages/ui/modal/package.json
+++ b/packages/ui/modal/package.json
@@ -28,9 +28,11 @@
     "devDependencies": {
         "@babel/cli": "^7.10.5",
         "@osui/brand-provider": "^2.1.9",
-        "@osui/ui": "^2.1.16",
+        "@osui/button": "workspace:^2.1.9",
+        "@osui/config-provider": "workspace:^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
+        "@osui/space": "workspace:^2.1.9",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -83,7 +85,6 @@
     "author": "huoyuxuan,liushaozhen",
     "license": "MIT",
     "dependencies": {
-        "@osui/button": "^2.1.9",
         "classnames": "^2.3.1"
     },
     "publishConfig": {
