--- a/packages/ui/tag/package.json
+++ b/packages/ui/tag/package.json
@@ -26,14 +26,15 @@
         "es/*.less"
     ],
     "devDependencies": {
+        "@ant-design/icons": "^4.7.0",
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^2.1.9",
-        "@osui/ui": "^2.1.16",
         "@emotion/babel-preset-css-prop": "^11.2.0",
         "@emotion/react": "^11.8.1",
         "@emotion/styled": "^11.8.1",
+        "@osui/brand-provider": "^2.1.9",
         "@osui/icons": "^2.1.9",
-        "@osui/icons-icloud": "^2.1.9",
+        "@osui/icons-icloud": "workspace:^2.1.9",
+        "@osui/ui": "workspace:^2.1.16",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -53,6 +54,7 @@
         "@types/jest": "^27.0.0",
         "@types/react-dom": "^17.0.2",
         "@types/react-test-renderer": "^17.0.1",
+        "ClockCircleOutlined": "link:@ant-design/icons/ClockCircleOutlined",
         "antd": "^4.21.3",
         "babel-loader": "^8.1.0",
         "babel-merge": "^3.0.0",
@@ -89,6 +91,9 @@
     "author": "huoyuxuan",
     "license": "MIT",
     "dependencies": {
+        "@osui/divider": "workspace:^2.1.9",
+        "@osui/input": "workspace:^2.1.12",
+        "@osui/tooltip": "workspace:^2.1.9",
         "classnames": "^2.3.1"
     },
     "publishConfig": {
