--- a/packages/ui/upload/package.json
+++ b/packages/ui/upload/package.json
@@ -26,12 +26,18 @@
         "es/*.less"
     ],
     "devDependencies": {
+        "@ant-design/icons": "^4.7.0",
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^2.1.9",
-        "@osui/ui": "^2.1.16",
         "@huse/effect-ref": "^1.1.1",
-        "@osui/icons": "^2.1.9",
+        "@osui/brand-provider": "workspace:^2.1.9",
+        "@osui/button": "workspace:^2.1.9",
+        "@osui/gap": "workspace:^2.1.9",
+        "@osui/icons": "workspace:^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
+        "@osui/markdown": "workspace:^2.1.9",
+        "@osui/message": "workspace:^2.1.9",
+        "@osui/modal": "workspace:^2.1.13",
+        "@osui/progress": "workspace:^2.1.9",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
