--- a/package.json
+++ b/package.json
@@ -33,14 +33,16 @@
         "@commitlint/cli": "^9.1.2",
         "@commitlint/config-conventional": "^9.1.2",
         "@emotion/babel-preset-css-prop": "^11.10.0",
+        "@osui/icloud-theme": "^2.1.17",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
         "@reskript/cli": "^2.5.4",
         "@reskript/cli-lint": "^2.5.4",
-        "@reskript/config-lint": "^5.7.1",
+        "@reskript/config-lint": "^2.5.4",
         "@storybook/cli": "^6.5.10",
         "@types/css": "^0.0.33",
         "@types/less": "^3.0.3",
+        "@types/react": "17.0.53",
         "commitizen": "^4.2.5",
         "css": "^3.0.0",
         "cz-conventional-changelog": "^3.3.0",
@@ -51,7 +53,7 @@
         "globby": "^13.1.2",
         "husky": "^8.0.1",
         "jest": "^27.5.1",
-        "lerna": "^3.22.1",
+        "lerna": "^6.4.1",
         "less": "^4.1.3",
         "less-vars-to-js": "^1.3.0",
         "lodash": "^4.17.21",
