--- a/packages/ui/alert/package.json
+++ b/packages/ui/alert/package.json
@@ -27,10 +27,10 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/divider": "workspace:^2.1.9",
+        "@osui/divider": "^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
-        "@osui/ui": "workspace:^2.1.17",
+        "@osui/ui": "^2.1.17",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
