--- a/packages/ui/avatar/package.json
+++ b/packages/ui/avatar/package.json
@@ -31,7 +31,7 @@
         "@osui/brand-provider": "^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
-        "@osui/tooltip": "workspace:^2.1.9",
+        "@osui/tooltip": "^2.1.9",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
