--- a/packages/ui/back-top/package.json
+++ b/packages/ui/back-top/package.json
@@ -29,7 +29,7 @@
         "@babel/cli": "^7.10.5",
         "@babel/core": "^7.10.5",
         "@osui/brand-provider": "^2.1.9",
-        "@osui/divider": "workspace:^2.1.9",
+        "@osui/divider": "^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
         "@reskript/cli": "^3.0.0",
