--- a/packages/ui/brand-provider/package.json
+++ b/packages/ui/brand-provider/package.json
@@ -28,8 +28,8 @@
     "devDependencies": {
         "@babel/cli": "^7.10.5",
         "@osui/brand-provider": "^2.1.9",
-        "@osui/collapse": "workspace:^2.1.9",
-        "@osui/divider": "workspace:^2.1.9",
+        "@osui/collapse": "^2.1.9",
+        "@osui/divider": "^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
         "@reskript/cli": "^3.0.0",
