--- a/packages/ui/comment/package.json
+++ b/packages/ui/comment/package.json
@@ -28,17 +28,17 @@
     "devDependencies": {
         "@babel/cli": "^7.10.5",
         "@huse/boolean": "^1.1.2",
-        "@osui/avatar": "workspace:^2.1.9",
+        "@osui/avatar": "^2.1.9",
         "@osui/brand-provider": "^2.1.9",
-        "@osui/button": "workspace:^2.1.9",
-        "@osui/flex-centered": "workspace:^2.1.9",
-        "@osui/form": "workspace:^2.1.14",
-        "@osui/gap": "workspace:^2.1.9",
+        "@osui/button": "^2.1.9",
+        "@osui/flex-centered": "^2.1.9",
+        "@osui/form": "^2.1.14",
+        "@osui/gap": "^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
-        "@osui/input": "workspace:^2.1.13",
-        "@osui/rate": "workspace:^2.1.9",
-        "@osui/space": "workspace:^2.1.9",
+        "@osui/input": "^2.1.13",
+        "@osui/rate": "^2.1.9",
+        "@osui/space": "^2.1.9",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
