--- a/packages/ui/drawer/package.json
+++ b/packages/ui/drawer/package.json
@@ -28,11 +28,11 @@
     "devDependencies": {
         "@babel/cli": "^7.10.5",
         "@osui/brand-provider": "^2.1.9",
-        "@osui/button": "workspace:^2.1.9",
-        "@osui/divider": "workspace:^2.1.9",
+        "@osui/button": "^2.1.9",
+        "@osui/divider": "^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
-        "@osui/space": "workspace:^2.1.9",
+        "@osui/space": "^2.1.9",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
