--- a/packages/ui/dropdown/package.json
+++ b/packages/ui/dropdown/package.json
@@ -28,12 +28,12 @@
     "devDependencies": {
         "@babel/cli": "^7.10.5",
         "@osui/brand-provider": "^2.1.9",
-        "@osui/button": "workspace:^2.1.9",
-        "@osui/flex-centered": "workspace:^2.1.9",
+        "@osui/button": "^2.1.9",
+        "@osui/flex-centered": "^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
-        "@osui/menu": "workspace:^2.1.9",
-        "@osui/space": "workspace:^2.1.9",
+        "@osui/menu": "^2.1.9",
+        "@osui/space": "^2.1.9",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
