--- a/packages/ui/form/package.json
+++ b/packages/ui/form/package.json
@@ -28,18 +28,18 @@
     "devDependencies": {
         "@ant-design/icons": "^4.7.0",
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "workspace:^2.1.9",
-        "@osui/button": "workspace:^2.1.9",
-        "@osui/checkbox": "workspace:^2.1.9",
-        "@osui/date-picker": "workspace:^2.1.9",
-        "@osui/divider": "workspace:^2.1.9",
+        "@osui/brand-provider": "^2.1.9",
+        "@osui/button": "^2.1.9",
+        "@osui/checkbox": "^2.1.9",
+        "@osui/date-picker": "^2.1.9",
+        "@osui/divider": "^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
-        "@osui/input": "workspace:^2.1.13",
-        "@osui/input-number": "workspace:^2.1.10",
-        "@osui/radio": "workspace:^2.1.9",
-        "@osui/select": "workspace:^2.1.9",
-        "@osui/switch": "workspace:^2.1.10",
+        "@osui/input": "^2.1.13",
+        "@osui/input-number": "^2.1.10",
+        "@osui/radio": "^2.1.9",
+        "@osui/select": "^2.1.9",
+        "@osui/switch": "^2.1.10",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
