--- a/packages/ui/input-number/package.json
+++ b/packages/ui/input-number/package.json
@@ -28,8 +28,11 @@
     "devDependencies": {
         "@babel/cli": "^7.10.5",
         "@osui/brand-provider": "^2.1.9",
+        "@osui/flex-centered": "workspace:^2.1.9",
+        "@osui/form": "workspace:^2.1.14",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
+        "@osui/input": "workspace:^2.1.13",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -77,7 +80,6 @@
     "dependencies": {
         "@huse/derived-state": "^1.1.1",
         "@osui/button": "^2.1.9",
-        "@osui/input": "^2.1.13",
         "classnames": "^2.3.1"
     },
     "repository": {
