--- a/packages/ui/input/package.json
+++ b/packages/ui/input/package.json
@@ -27,19 +27,19 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/auto-complete": "workspace:^2.1.9",
-        "@osui/brand-provider": "workspace:^2.1.9",
-        "@osui/button": "workspace:^2.1.9",
-        "@osui/cascader": "workspace:^2.1.9",
-        "@osui/divider": "workspace:^2.1.9",
-        "@osui/flex-centered": "workspace:^2.1.9",
-        "@osui/form": "workspace:^2.1.14",
-        "@osui/gap": "workspace:^2.1.9",
-        "@osui/icloud-theme": "workspace:^2.1.17",
-        "@osui/icons": "workspace:^2.1.9",
-        "@osui/icons-icloud": "workspace:^2.1.9",
-        "@osui/select": "workspace:^2.1.9",
-        "@osui/version": "workspace:^2.1.9",
+        "@osui/auto-complete": "^2.1.9",
+        "@osui/brand-provider": "^2.1.9",
+        "@osui/button": "^2.1.9",
+        "@osui/cascader": "^2.1.9",
+        "@osui/divider": "^2.1.9",
+        "@osui/flex-centered": "^2.1.9",
+        "@osui/form": "^2.1.14",
+        "@osui/gap": "^2.1.9",
+        "@osui/icloud-theme": "^2.1.17",
+        "@osui/icons": "^2.1.9",
+        "@osui/icons-icloud": "^2.1.9",
+        "@osui/select": "^2.1.9",
+        "@osui/version": "^2.1.9",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
