--- a/packages/ui/list/package.json
+++ b/packages/ui/list/package.json
@@ -27,9 +27,9 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/avatar": "workspace:^2.1.9",
+        "@osui/avatar": "^2.1.9",
         "@osui/brand-provider": "^2.1.9",
-        "@osui/icloud-theme": "workspace:^2.1.17",
+        "@osui/icloud-theme": "^2.1.17",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
         "@reskript/cli": "^3.0.0",
