--- a/packages/ui/popover/package.json
+++ b/packages/ui/popover/package.json
@@ -27,15 +27,15 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "workspace:^2.1.9",
-        "@osui/button": "workspace:^2.1.9",
-        "@osui/divider": "workspace:^2.1.9",
-        "@osui/form": "workspace:^2.1.14",
-        "@osui/gap": "workspace:^2.1.9",
+        "@osui/brand-provider": "^2.1.9",
+        "@osui/button": "^2.1.9",
+        "@osui/divider": "^2.1.9",
+        "@osui/form": "^2.1.14",
+        "@osui/gap": "^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
-        "@osui/input": "workspace:^2.1.13",
-        "@osui/markdown": "workspace:^2.1.9",
+        "@osui/input": "^2.1.13",
+        "@osui/markdown": "^2.1.9",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
