--- a/packages/ui/slider/package.json
+++ b/packages/ui/slider/package.json
@@ -27,12 +27,12 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "workspace:^2.1.9",
-        "@osui/divider": "workspace:^2.1.9",
-        "@osui/gap": "workspace:^2.1.9",
+        "@osui/brand-provider": "^2.1.9",
+        "@osui/divider": "^2.1.9",
+        "@osui/gap": "^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
-        "@osui/input-number": "workspace:^2.1.10",
+        "@osui/input-number": "^2.1.10",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
