--- a/packages/ui/table/package.json
+++ b/packages/ui/table/package.json
@@ -28,13 +28,13 @@
     "devDependencies": {
         "@babel/cli": "^7.10.5",
         "@osui/brand-provider": "^2.1.9",
-        "@osui/form": "workspace:^2.1.14",
+        "@osui/form": "^2.1.14",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
         "@osui/pagination": "^2.1.10",
-        "@osui/radio": "workspace:^2.1.9",
-        "@osui/space": "workspace:^2.1.9",
-        "@osui/switch": "workspace:^2.1.10",
+        "@osui/radio": "^2.1.9",
+        "@osui/space": "^2.1.9",
+        "@osui/switch": "^2.1.10",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
