--- a/packages/ui/tabs/package.json
+++ b/packages/ui/tabs/package.json
@@ -28,14 +28,14 @@
     "devDependencies": {
         "@babel/cli": "^7.10.5",
         "@osui/brand-provider": "^2.1.9",
-        "@osui/button": "workspace:^2.1.9",
-        "@osui/divider": "workspace:^2.1.9",
-        "@osui/dropdown": "workspace:^2.1.9",
-        "@osui/flex-centered": "workspace:^2.1.9",
+        "@osui/button": "^2.1.9",
+        "@osui/divider": "^2.1.9",
+        "@osui/dropdown": "^2.1.9",
+        "@osui/flex-centered": "^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
-        "@osui/menu": "workspace:^2.1.9",
-        "@osui/text-overflow-tooltip": "workspace:^2.1.9",
+        "@osui/menu": "^2.1.9",
+        "@osui/text-overflow-tooltip": "^2.1.9",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
