--- a/packages/ui/tag/package.json
+++ b/packages/ui/tag/package.json
@@ -33,8 +33,8 @@
         "@emotion/styled": "^11.8.1",
         "@osui/brand-provider": "^2.1.9",
         "@osui/icons": "^2.1.9",
-        "@osui/icons-icloud": "workspace:^2.1.9",
-        "@osui/ui": "workspace:^2.1.17",
+        "@osui/icons-icloud": "^2.1.9",
+        "@osui/ui": "^2.1.17",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -91,9 +91,9 @@
     "author": "huoyuxuan",
     "license": "MIT",
     "dependencies": {
-        "@osui/divider": "workspace:^2.1.9",
-        "@osui/input": "workspace:^2.1.13",
-        "@osui/tooltip": "workspace:^2.1.9",
+        "@osui/divider": "^2.1.9",
+        "@osui/input": "^2.1.13",
+        "@osui/tooltip": "^2.1.9",
         "classnames": "^2.3.1"
     },
     "publishConfig": {
