--- a/packages/ui/theme-provider/package.json
+++ b/packages/ui/theme-provider/package.json
@@ -28,7 +28,7 @@
     "devDependencies": {
         "@babel/cli": "^7.10.5",
         "@osui/brand-provider": "^2.1.9",
-        "@osui/button": "workspace:^2.1.9",
+        "@osui/button": "^2.1.9",
         "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
         "@reskript/cli": "^3.0.0",
