--- a/packages/ui/upload/package.json
+++ b/packages/ui/upload/package.json
@@ -29,15 +29,15 @@
         "@ant-design/icons": "^4.7.0",
         "@babel/cli": "^7.10.5",
         "@huse/effect-ref": "^1.1.1",
-        "@osui/brand-provider": "workspace:^2.1.9",
-        "@osui/button": "workspace:^2.1.9",
-        "@osui/gap": "workspace:^2.1.9",
-        "@osui/icons": "workspace:^2.1.9",
+        "@osui/brand-provider": "^2.1.9",
+        "@osui/button": "^2.1.9",
+        "@osui/gap": "^2.1.9",
+        "@osui/icons": "^2.1.9",
         "@osui/icons-icloud": "^2.1.9",
-        "@osui/markdown": "workspace:^2.1.9",
-        "@osui/message": "workspace:^2.1.9",
-        "@osui/modal": "workspace:^2.1.13",
-        "@osui/progress": "workspace:^2.1.9",
+        "@osui/markdown": "^2.1.9",
+        "@osui/message": "^2.1.9",
+        "@osui/modal": "^2.1.13",
+        "@osui/progress": "^2.1.9",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
