--- a/demo/package.json
+++ b/demo/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@osui/icloud-docs",
+    "name": "@osui/icloud-demo",
     "private": true,
     "version": "2.1.9",
     "description": "",
