--- a/packages/ui/docs/package.json
+++ b/packages/ui/docs/package.json
@@ -73,83 +73,83 @@
     "license": "MIT",
     "dependencies": {
         "@emotion/react": "^11.10.6",
-        "@osui/affix": "workspace:^2.1.9",
-        "@osui/alert": "workspace:^2.1.9",
-        "@osui/anchor": "workspace:^2.1.9",
-        "@osui/auto-complete": "workspace:^2.1.9",
-        "@osui/avatar": "workspace:^2.1.9",
-        "@osui/back-top": "workspace:^2.1.9",
-        "@osui/badge": "workspace:^2.1.9",
-        "@osui/brand-provider": "workspace:^2.1.9",
-        "@osui/breadcrumb": "workspace:^2.1.9",
-        "@osui/button": "workspace:^2.1.9",
-        "@osui/calendar": "workspace:^2.1.9",
-        "@osui/card": "workspace:^2.1.9",
-        "@osui/carousel": "workspace:^2.1.9",
-        "@osui/cascader": "workspace:^2.1.9",
-        "@osui/checkbox": "workspace:^2.1.9",
-        "@osui/col": "workspace:^2.1.9",
-        "@osui/collapse": "workspace:^2.1.9",
-        "@osui/config-provider": "workspace:^2.1.9",
-        "@osui/date-picker": "workspace:^2.1.9",
-        "@osui/descriptions": "workspace:^2.1.9",
-        "@osui/divider": "workspace:^2.1.9",
-        "@osui/drawer": "workspace:^2.1.9",
-        "@osui/dropdown": "workspace:^2.1.9",
-        "@osui/empty": "workspace:^2.1.9",
-        "@osui/flex-centered": "workspace:^2.1.9",
-        "@osui/form": "workspace:^2.1.14",
-        "@osui/gap": "workspace:^2.1.9",
-        "@osui/grid": "workspace:^2.1.9",
-        "@osui/highlight-text": "workspace:^2.1.9",
-        "@osui/icloud-theme": "workspace:^2.1.17",
-        "@osui/icons": "workspace:^2.1.9",
-        "@osui/icons-icloud": "workspace:^2.1.9",
-        "@osui/image": "workspace:^2.1.9",
-        "@osui/input": "workspace:^2.1.13",
-        "@osui/input-number": "workspace:^2.1.11",
-        "@osui/joyride": "workspace:^2.1.9",
-        "@osui/layout": "workspace:^2.1.9",
-        "@osui/list": "workspace:^2.1.10",
-        "@osui/markdown": "workspace:^2.1.9",
-        "@osui/mentions": "workspace:^2.1.9",
-        "@osui/menu": "workspace:^2.1.9",
-        "@osui/message": "workspace:^2.1.9",
-        "@osui/modal": "workspace:^2.1.13",
-        "@osui/notification": "workspace:^2.1.9",
-        "@osui/pagination": "workspace:^2.1.10",
-        "@osui/popconfirm": "workspace:^2.1.9",
-        "@osui/popover": "workspace:^2.1.9",
-        "@osui/progress": "workspace:^2.1.9",
-        "@osui/quick-edit": "workspace:^2.1.10",
-        "@osui/radio": "workspace:^2.1.9",
-        "@osui/rate": "workspace:^2.1.9",
-        "@osui/result": "workspace:^2.1.9",
-        "@osui/row": "workspace:^2.1.9",
-        "@osui/segmented": "workspace:^2.1.9",
-        "@osui/select": "workspace:^2.1.9",
-        "@osui/skeleton": "workspace:^2.1.9",
-        "@osui/slider": "workspace:^2.1.9",
-        "@osui/space": "workspace:^2.1.9",
-        "@osui/spin": "workspace:^2.1.9",
-        "@osui/statistic": "workspace:^2.1.9",
-        "@osui/steps": "workspace:^2.1.9",
-        "@osui/switch": "workspace:^2.1.10",
-        "@osui/table": "workspace:^2.1.10",
-        "@osui/tabs": "workspace:^2.1.9",
-        "@osui/tag": "workspace:^2.1.9",
-        "@osui/text-overflow-tooltip": "workspace:^2.1.9",
-        "@osui/theme-provider": "workspace:^2.1.9",
-        "@osui/time-picker": "workspace:^2.1.9",
-        "@osui/timeline": "workspace:^2.1.9",
-        "@osui/tooltip": "workspace:^2.1.9",
-        "@osui/transfer": "workspace:^2.1.9",
-        "@osui/tree": "workspace:^2.1.9",
-        "@osui/tree-select": "workspace:^2.1.9",
-        "@osui/typography": "workspace:^2.1.9",
-        "@osui/upload": "workspace:^2.1.9",
-        "@osui/version": "workspace:^2.1.9",
-        "antd": "4.22.8",
+        "@osui/affix": "^3.0.0",
+        "@osui/alert": "^3.0.0",
+        "@osui/anchor": "^3.0.0",
+        "@osui/auto-complete": "^3.0.0",
+        "@osui/avatar": "^3.0.0",
+        "@osui/back-top": "^3.0.0",
+        "@osui/badge": "^3.0.0",
+        "@osui/brand-provider": "^3.0.0",
+        "@osui/breadcrumb": "^3.0.0",
+        "@osui/button": "^3.0.0",
+        "@osui/calendar": "^3.0.0",
+        "@osui/card": "^3.0.0",
+        "@osui/carousel": "^3.0.0",
+        "@osui/cascader": "^3.0.0",
+        "@osui/checkbox": "^3.0.0",
+        "@osui/col": "^3.0.0",
+        "@osui/collapse": "^3.0.0",
+        "@osui/config-provider": "^3.0.0",
+        "@osui/date-picker": "^3.0.0",
+        "@osui/descriptions": "^3.0.0",
+        "@osui/divider": "^3.0.0",
+        "@osui/drawer": "^3.0.0",
+        "@osui/dropdown": "^3.0.0",
+        "@osui/empty": "^3.0.0",
+        "@osui/flex-centered": "^3.0.0",
+        "@osui/form": "^3.0.0",
+        "@osui/gap": "^3.0.0",
+        "@osui/grid": "^3.0.0",
+        "@osui/highlight-text": "^3.0.0",
+        "@osui/icloud-theme": "^3.0.0",
+        "@osui/icons": "^3.0.0",
+        "@osui/icons-icloud": "^3.0.0",
+        "@osui/image": "^3.0.0",
+        "@osui/input": "^3.0.0",
+        "@osui/input-number": "^3.0.0",
+        "@osui/joyride": "^3.0.0",
+        "@osui/layout": "^3.0.0",
+        "@osui/list": "^3.0.0",
+        "@osui/markdown": "^3.0.0",
+        "@osui/mentions": "^3.0.0",
+        "@osui/menu": "^3.0.0",
+        "@osui/message": "^3.0.0",
+        "@osui/modal": "^3.0.0",
+        "@osui/notification": "^3.0.0",
+        "@osui/pagination": "^3.0.0",
+        "@osui/popconfirm": "^3.0.0",
+        "@osui/popover": "^3.0.0",
+        "@osui/progress": "^3.0.0",
+        "@osui/quick-edit": "^3.0.0",
+        "@osui/radio": "^3.0.0",
+        "@osui/rate": "^3.0.0",
+        "@osui/result": "^3.0.0",
+        "@osui/row": "^3.0.0",
+        "@osui/segmented": "^3.0.0",
+        "@osui/select": "^3.0.0",
+        "@osui/skeleton": "^3.0.0",
+        "@osui/slider": "^3.0.0",
+        "@osui/space": "^3.0.0",
+        "@osui/spin": "^3.0.0",
+        "@osui/statistic": "^3.0.0",
+        "@osui/steps": "^3.0.0",
+        "@osui/switch": "^3.0.0",
+        "@osui/table": "^3.0.0",
+        "@osui/tabs": "^3.0.0",
+        "@osui/tag": "^3.0.0",
+        "@osui/text-overflow-tooltip": "^3.0.0",
+        "@osui/theme-provider": "^3.0.0",
+        "@osui/time-picker": "^3.0.0",
+        "@osui/timeline": "^3.0.0",
+        "@osui/tooltip": "^3.0.0",
+        "@osui/transfer": "^3.0.0",
+        "@osui/tree": "^3.0.0",
+        "@osui/tree-select": "^3.0.0",
+        "@osui/typography": "^3.0.0",
+        "@osui/upload": "^3.0.0",
+        "@osui/version": "^3.0.0",
+        "antd": "^5.3.0",
         "classnames": "^2.3.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
