BrandProvider 参数类型微调及Modal、Select、Anchor、auto-complete调整样式

--- a/packages/ui/alert/package.json
+++ b/packages/ui/alert/package.json
@@ -27,6 +27,7 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
+        "@osui/brand-provider": "^3.0.0",
         "@osui/divider": "^3.0.0",
         "@osui/icons": "^3.0.0",
         "@reskript/cli": "^3.0.0",
