--- a/packages/ui/select/package.json
+++ b/packages/ui/select/package.json
@@ -29,6 +29,8 @@
         "@babel/cli": "^7.10.5",
         "@osui/brand-provider": "^3.0.0",
         "@osui/icons": "^3.0.0",
+        "@osui/space": "^3.0.0",
+        "@osui/spin": "^3.0.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
