dev: prerelease 3.0.0-aplha.0

--- a/packages/ui/row/package.json
+++ b/packages/ui/row/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/row",
-    "version": "3.0.0",
+    "version": "3.0.0-alpha.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -27,8 +27,8 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^3.0.0",
-        "@osui/icons": "^3.0.0",
+        "@osui/brand-provider": "^3.0.0-alpha.0",
+        "@osui/icons": "^3.0.0-alpha.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
