--- a/packages/ui-theme/icloud-theme/package.json
+++ b/packages/ui-theme/icloud-theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@osui/icloud-theme",
-  "version": "3.0.0",
+  "version": "3.0.0-alpha.0",
   "description": "",
   "main": "dist/theme/index.js",
   "module": "dist/theme/index.js",
@@ -22,7 +22,7 @@
   ],
   "devDependencies": {
     "@babel/cli": "^7.10.5",
-    "@osui/icons": "^3.0.0",
+    "@osui/icons": "^3.0.0-alpha.0",
     "@reskript/cli": "^3.0.0",
     "@reskript/cli-lint": "^3.0.0",
     "@reskript/config-babel": "^3.0.0",
