--- a/packages/ui/brand-provider/package.json
+++ b/packages/ui/brand-provider/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/brand-provider",
-    "version": "3.0.0",
+    "version": "3.0.0-alpha.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -28,10 +28,10 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^3.0.0",
-        "@osui/collapse": "^3.0.0",
-        "@osui/divider": "^3.0.0",
-        "@osui/icons": "^3.0.0",
+        "@osui/brand-provider": "^3.0.0-alpha.0",
+        "@osui/collapse": "^3.0.0-alpha.0",
+        "@osui/divider": "^3.0.0-alpha.0",
+        "@osui/icons": "^3.0.0-alpha.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -90,7 +90,7 @@
         "registry": "https://registry.npmjs.com"
     },
     "dependencies": {
-        "@osui/empty": "^3.0.0"
+        "@osui/empty": "^3.0.0-alpha.0"
     },
     "packageManager": "pnpm@7.14.2"
 }
