--- a/packages/ui/button/package.json
+++ b/packages/ui/button/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/button",
-    "version": "3.0.0",
+    "version": "3.0.0-alpha.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -27,13 +27,13 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^3.0.0",
-        "@osui/divider": "^3.0.0",
-        "@osui/flex-centered": "^3.0.0",
-        "@osui/gap": "workspace:^3.0.0",
-        "@osui/icons": "^3.0.0",
-        "@osui/markdown": "^3.0.0",
-        "@osui/space": "^3.0.0",
+        "@osui/brand-provider": "^3.0.0-alpha.0",
+        "@osui/divider": "^3.0.0-alpha.0",
+        "@osui/flex-centered": "^3.0.0-alpha.0",
+        "@osui/gap": "workspace:^3.0.0-alpha.0",
+        "@osui/icons": "^3.0.0-alpha.0",
+        "@osui/markdown": "^3.0.0-alpha.0",
+        "@osui/space": "^3.0.0-alpha.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -89,7 +89,7 @@
     "author": "zhangxingchang",
     "license": "MIT",
     "dependencies": {
-        "@osui/tooltip": "^3.0.0",
+        "@osui/tooltip": "^3.0.0-alpha.0",
         "classnames": "^2.3.1"
     },
     "publishConfig": {
