--- a/packages/ui/collapse/package.json
+++ b/packages/ui/collapse/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/collapse",
-    "version": "3.0.0",
+    "version": "3.0.0-alpha.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -28,9 +28,9 @@
     "devDependencies": {
         "@ant-design/icons": "^4.7.0",
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^3.0.0",
-        "@osui/icons": "^3.0.0",
-        "@osui/select": "^3.0.0",
+        "@osui/brand-provider": "^3.0.0-alpha.0",
+        "@osui/icons": "^3.0.0-alpha.0",
+        "@osui/select": "^3.0.0-alpha.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -48,6 +48,7 @@
         "@swc/cli": "^0.1.62",
         "@swc/core": "^1.3.40",
         "@types/enzyme": "^3.10.9",
+        "@types/hoist-non-react-statics": "^3.3.1",
         "@types/jest": "^27.0.0",
         "@types/react-dom": "^17.0.2",
         "@types/react-test-renderer": "^17.0.1",
@@ -70,8 +71,7 @@
         "stylelint": "^14.0.0",
         "ts-jest": "^27.0.3",
         "typescript": "^4.4.3",
-        "webpack": "^5.52.1",
-        "@types/hoist-non-react-statics": "^3.3.1"
+        "webpack": "^5.52.1"
     },
     "peerDependencies": {
         "@osui/brand-provider": "^2.1.0",
