--- a/packages/ui/input-number/package.json
+++ b/packages/ui/input-number/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/input-number",
-    "version": "3.0.0",
+    "version": "3.0.0-alpha.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -27,11 +27,11 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^3.0.0",
-        "@osui/flex-centered": "workspace:^3.0.0",
-        "@osui/form": "workspace:^3.0.0",
-        "@osui/icons": "^3.0.0",
-        "@osui/input": "workspace:^3.0.0",
+        "@osui/brand-provider": "^3.0.0-alpha.0",
+        "@osui/flex-centered": "workspace:^3.0.0-alpha.0",
+        "@osui/form": "workspace:^3.0.0-alpha.0",
+        "@osui/icons": "^3.0.0-alpha.0",
+        "@osui/input": "workspace:^3.0.0-alpha.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -80,7 +80,7 @@
     },
     "dependencies": {
         "@huse/derived-state": "^1.1.1",
-        "@osui/button": "^3.0.0",
+        "@osui/button": "^3.0.0-alpha.0",
         "classnames": "^2.3.1"
     },
     "repository": {
