--- a/packages/ui/list/package.json
+++ b/packages/ui/list/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/list",
-    "version": "3.0.0",
+    "version": "3.0.0-alpha.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -27,10 +27,10 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/avatar": "^3.0.0",
-        "@osui/brand-provider": "^3.0.0",
-        "@osui/icloud-theme": "^3.0.0",
-        "@osui/icons": "^3.0.0",
+        "@osui/avatar": "^3.0.0-alpha.0",
+        "@osui/brand-provider": "^3.0.0-alpha.0",
+        "@osui/icloud-theme": "^3.0.0-alpha.0",
+        "@osui/icons": "^3.0.0-alpha.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -89,7 +89,7 @@
         "registry": "https://registry.npmjs.com"
     },
     "dependencies": {
-        "@osui/spin": "^3.0.0",
+        "@osui/spin": "^3.0.0-alpha.0",
         "hoist-non-react-statics": "^3.3.2"
     },
     "packageManager": "pnpm@7.14.2"
