--- a/packages/ui/message/package.json
+++ b/packages/ui/message/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/message",
-    "version": "3.0.0",
+    "version": "3.0.0-alpha.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -27,10 +27,10 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^3.0.0",
-        "@osui/button": "workspace:^3.0.0",
-        "@osui/icons": "^3.0.0",
-        "@osui/markdown": "workspace:^3.0.0",
+        "@osui/brand-provider": "^3.0.0-alpha.0",
+        "@osui/button": "workspace:^3.0.0-alpha.0",
+        "@osui/icons": "^3.0.0-alpha.0",
+        "@osui/markdown": "workspace:^3.0.0-alpha.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -87,7 +87,7 @@
     "license": "MIT",
     "dependencies": {
         "@huse/timeout": "^1.1.1",
-        "@osui/config-provider": "^3.0.0",
+        "@osui/config-provider": "^3.0.0-alpha.0",
         "classnames": "^2.3.1",
         "lodash.partial": "^4.2.1"
     },
