--- a/packages/ui/steps/package.json
+++ b/packages/ui/steps/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/steps",
-    "version": "3.0.0",
+    "version": "3.0.0-alpha.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -27,11 +27,11 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^3.0.0",
-        "@osui/button": "^3.0.0",
-        "@osui/icloud-theme": "^3.0.0",
-        "@osui/icons": "^3.0.0",
-        "@osui/space": "^3.0.0",
+        "@osui/brand-provider": "^3.0.0-alpha.0",
+        "@osui/button": "^3.0.0-alpha.0",
+        "@osui/icloud-theme": "^3.0.0-alpha.0",
+        "@osui/icons": "^3.0.0-alpha.0",
+        "@osui/space": "^3.0.0-alpha.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
