--- a/packages/ui/tabs/package.json
+++ b/packages/ui/tabs/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/tabs",
-    "version": "3.0.0",
+    "version": "3.0.0-alpha.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -27,14 +27,14 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^3.0.0",
-        "@osui/button": "^3.0.0",
-        "@osui/divider": "^3.0.0",
-        "@osui/dropdown": "^3.0.0",
-        "@osui/flex-centered": "^3.0.0",
-        "@osui/icons": "^3.0.0",
-        "@osui/menu": "^3.0.0",
-        "@osui/text-overflow-tooltip": "^3.0.0",
+        "@osui/brand-provider": "^3.0.0-alpha.0",
+        "@osui/button": "^3.0.0-alpha.0",
+        "@osui/divider": "^3.0.0-alpha.0",
+        "@osui/dropdown": "^3.0.0-alpha.0",
+        "@osui/flex-centered": "^3.0.0-alpha.0",
+        "@osui/icons": "^3.0.0-alpha.0",
+        "@osui/menu": "^3.0.0-alpha.0",
+        "@osui/text-overflow-tooltip": "^3.0.0-alpha.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
