--- a/packages/ui/theme-provider/package.json
+++ b/packages/ui/theme-provider/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@osui/theme-provider",
-    "version": "3.0.0",
+    "version": "3.0.0-alpha.0",
     "description": "",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -27,9 +27,9 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.10.5",
-        "@osui/brand-provider": "^3.0.0",
-        "@osui/button": "^3.0.0",
-        "@osui/icons": "^3.0.0",
+        "@osui/brand-provider": "^3.0.0-alpha.0",
+        "@osui/button": "^3.0.0-alpha.0",
+        "@osui/icons": "^3.0.0-alpha.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -87,8 +87,8 @@
         "registry": "https://registry.npmjs.com"
     },
     "dependencies": {
-        "@osui/dropdown": "^3.0.0",
-        "@osui/menu": "^3.0.0",
+        "@osui/dropdown": "^3.0.0-alpha.0",
+        "@osui/menu": "^3.0.0-alpha.0",
         "classname": "^0.0.0",
         "classnames": "^2.3.1"
     },
