--- a/packages/ui/joyride/package.json
+++ b/packages/ui/joyride/package.json
@@ -95,5 +95,6 @@
         "lodash.merge": "^4.6.2",
         "react-joyride": "^2.3.0"
     },
-    "packageManager": "pnpm@7.14.2"
+    "packageManager": "pnpm@7.14.2",
+    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915"
 }
