--- a/packages/ui/quick-edit/package.json
+++ b/packages/ui/quick-edit/package.json
@@ -94,5 +94,6 @@
         "hoist-non-react-statics": "^3.3.2",
         "react-abstract-quick-edit": "^0.0.7"
     },
-    "packageManager": "pnpm@7.14.2"
+    "packageManager": "pnpm@7.14.2",
+    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915"
 }
