--- a/packages/ui/upload/package.json
+++ b/packages/ui/upload/package.json
@@ -99,5 +99,6 @@
         "classnames": "^2.3.1",
         "hoist-non-react-statics": "^3.3.2"
     },
-    "packageManager": "pnpm@7.14.2"
+    "packageManager": "pnpm@7.14.2",
+    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915"
 }
