--- a/packages/ui/button/package.json
+++ b/packages/ui/button/package.json
@@ -30,7 +30,7 @@
         "@osui/brand-provider": "^3.0.0-alpha.0",
         "@osui/divider": "^3.0.0-alpha.0",
         "@osui/flex-centered": "^3.0.0-alpha.0",
-        "@osui/gap": "workspace:^3.0.0-alpha.0",
+        "@osui/gap": "^3.0.0-alpha.0",
         "@osui/icons": "^3.0.0-alpha.0",
         "@osui/markdown": "^3.0.0-alpha.0",
         "@osui/space": "^3.0.0-alpha.0",
@@ -96,6 +96,6 @@
         "access": "public",
         "registry": "https://registry.npmjs.com"
     },
-    "gitHead": "904178b6c0bb86963017122daa529580decb66e8",
+    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915",
     "packageManager": "pnpm@7.14.2"
 }
