--- a/packages/ui/calendar/package.json
+++ b/packages/ui/calendar/package.json
@@ -90,5 +90,6 @@
     "dependencies": {
         "hoist-non-react-statics": "^3.3.2"
     },
-    "packageManager": "pnpm@7.14.2"
+    "packageManager": "pnpm@7.14.2",
+    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915"
 }
