--- a/packages/ui/input-number/package.json
+++ b/packages/ui/input-number/package.json
@@ -28,10 +28,10 @@
     "devDependencies": {
         "@babel/cli": "^7.10.5",
         "@osui/brand-provider": "^3.0.0-alpha.0",
-        "@osui/flex-centered": "workspace:^3.0.0-alpha.0",
-        "@osui/form": "workspace:^3.0.0-alpha.0",
+        "@osui/flex-centered": "^3.0.0-alpha.0",
+        "@osui/form": "^3.0.0-alpha.0",
         "@osui/icons": "^3.0.0-alpha.0",
-        "@osui/input": "workspace:^3.0.0-alpha.0",
+        "@osui/input": "^3.0.0-alpha.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -93,5 +93,6 @@
         "access": "public",
         "registry": "https://registry.npmjs.com"
     },
-    "packageManager": "pnpm@7.14.2"
+    "packageManager": "pnpm@7.14.2",
+    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915"
 }
