--- a/packages/ui/list/package.json
+++ b/packages/ui/list/package.json
@@ -92,5 +92,6 @@
         "@osui/spin": "^3.0.0-alpha.0",
         "hoist-non-react-statics": "^3.3.2"
     },
-    "packageManager": "pnpm@7.14.2"
+    "packageManager": "pnpm@7.14.2",
+    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915"
 }
