--- a/packages/ui/message/package.json
+++ b/packages/ui/message/package.json
@@ -28,9 +28,9 @@
     "devDependencies": {
         "@babel/cli": "^7.10.5",
         "@osui/brand-provider": "^3.0.0-alpha.0",
-        "@osui/button": "workspace:^3.0.0-alpha.0",
+        "@osui/button": "^3.0.0-alpha.0",
         "@osui/icons": "^3.0.0-alpha.0",
-        "@osui/markdown": "workspace:^3.0.0-alpha.0",
+        "@osui/markdown": "^3.0.0-alpha.0",
         "@reskript/cli": "^3.0.0",
         "@reskript/cli-lint": "^3.0.0",
         "@reskript/config-babel": "^3.0.0",
@@ -95,6 +95,6 @@
         "access": "public",
         "registry": "https://registry.npmjs.com"
     },
-    "gitHead": "904178b6c0bb86963017122daa529580decb66e8",
+    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915",
     "packageManager": "pnpm@7.14.2"
 }
