--- a/packages/ui/spin/package.json
+++ b/packages/ui/spin/package.json
@@ -88,5 +88,6 @@
     "dependencies": {
         "classnames": "^2.3.1"
     },
-    "packageManager": "pnpm@7.14.2"
+    "packageManager": "pnpm@7.14.2",
+    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915"
 }
