--- a/packages/ui/text-overflow-tooltip/package.json
+++ b/packages/ui/text-overflow-tooltip/package.json
@@ -89,5 +89,6 @@
     "dependencies": {
         "@osui/tooltip": "^3.0.0-alpha.0"
     },
-    "packageManager": "pnpm@7.14.2"
+    "packageManager": "pnpm@7.14.2",
+    "gitHead": "9a9d1815ebc63817063dec6f171668e0de0e8915"
 }
